# openai-rust

./: Cargo.toml  LICENSE  README.md
.github/workflows/: cargo.yml
examples/: chat_example.rs  chat_stream_example.rs
src/: chat.rs  completions.rs  edit.rs  edits.rs  embeddings.rs  images.rs  lib.rs  models.rs
tests/: mod.rs  test.rs
