[package]
name = "openai-rust"
version = "0.1.3"
edition = "2021"
authors = ["LevitatingBusinessMan"]
description = "Library for the OpenAI API"
repository = "https://github.com/LevitatingBusinessMan/openai-rust"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "chat"
path = "examples/chat_example.rs"

[dependencies]
anyhow = "1.0.70"
bytes = "1.4.0"
futures-util = "0.3.27"
lazy_static = "1.4.0"
reqwest = { features = ["json", "stream"], version = "0.11.14"}
serde = {features = ["derive"], version = "1.0.157"}
serde_json = "1.0.94"

[dev-dependencies]
tokio = { features = ["macros", "rt-multi-thread"], version = "1.26.0"}
