[package]
name = "openai-rust"
version = "0.2.2"
edition = "2021"
authors = ["LevitatingBusinessMan"]
description = "An unofficial library for the OpenAI API"
repository = "https://github.com/LevitatingBusinessMan/openai-rust"
keywords = ["openai", "gpt", "library", "api", "async"]
documentation = "https://docs.rs/openai-rust"
categories = ["api-bindings"]
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "chat"
path = "examples/chat_example.rs"
doc-scrape-examples = true

[[example]]
name = "chat_stream"
path = "examples/chat_stream_example.rs"

[dependencies]
anyhow = "1.0.70"
bytes = "1.4.0"
futures-util = "0.3.27"
lazy_static = "1.4.0"
reqwest = { features = ["json", "stream"], version = "0.11.14"}
serde = {features = ["derive"], version = "1.0.157"}
serde_json = "1.0.94"

[dev-dependencies]
tokio = { features = ["macros", "rt-multi-thread"], version = "1.26.0"}
tokio-test = "0.4.2"
